testing/Travis/testcases/Parsing/shouldFail/Issue980.adl
CONTEXT Issue980 IN ENGLISH

CONCEPT Fruit "Most general concept"
CLASSIFY Citrus ISA Fruit
CLASSIFY Orange ISA Citrus
CLASSIFY Lemon ISA Citrus

RELATION name[Citrus*Name]
RELATION name[A * B]  -- This relation's purpose is to distract the typechecker. 

INTERFACE Orange: I[Orange]
BOX [ "I" LABEL "" : I
    , "name" : name
    ]

INTERFACE Lemon: I[Lemon]
BOX [ "I" LABEL "" : I
    , "name" : name[Citrus*Name]
    ]

ENDCONTEXT